[package]
name = "currency_convertor"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "This allows you to convert currencies using the openexchangerates.org API."
repository = "https://github.com/TuxMC-sys/currency_convertor/tree/main"
license = "GPL-3.0-or-later"
keywords = ["currency","currencies","utilities","money", "international"]
categories = ["command-line-utilities","finance"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0.1"
