[package]
name = "currency_converter"
version = "0.2.1"
edition = "2021"
readme = "README.md"
description = "A minimalist terminal currency convertor"
repository = "https://github.com/TuxMC-sys/currency_convertor/tree/main"
license = "GPL-3.0-or-later"
keywords = ["currency","currencies","utilities","money", "international"]
categories = ["command-line-utilities","finance"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0.1"
clap = { version = "4.5.7", features = ["derive"] }
openssl = { version = '0.10', features = ["vendored"] }